--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <video
                   src="dm-assets/videos/CHLOE.mp4"
                   playsinline
+                  poster="dm-assets/videos/CHLOE.png"
                   preload="metadata"
                   loop
                 ></video>
@@ -109,6 +110,7 @@
                 <video
                   src="dm-assets/videos/Daragh.mp4"
                   playsinline
+                  poster="dm-assets/videos/Daragh.png"
                   preload="metadata"
                   loop
                 ></video>
@@ -152,6 +154,7 @@
                 <video
                   src="dm-assets/videos/Geethika.mp4"
                   playsinline
+                  poster="dm-assets/videos/Geethika.png"
                   preload="metadata"
                   loop
                 ></video>
@@ -197,6 +200,7 @@
                 <video
                   src="dm-assets/videos/H.mp4"
                   playsinline
+                  poster="dm-assets/videos/H.png"
                   preload="metadata"
                   loop
                 ></video>
@@ -241,6 +245,7 @@
                 <video
                   src="dm-assets/videos/Maggie.mp4"
                   playsinline
+                  poster="dm-assets/videos/Maggie.png"
                   preload="metadata"
                   loop
                 ></video>
@@ -285,6 +290,7 @@
                 <video
                   src="dm-assets/videos/Milo.mp4"
                   playsinline
+                  poster="dm-assets/videos/Milo.png"
                   preload="metadata"
                   loop
                 ></video>
@@ -327,6 +333,7 @@
                 <video
                   src="dm-assets/videos/Motherlan.mp4"
                   playsinline
+                  poster="dm-assets/videos/Motherlan.png"
                   preload="metadata"
                   loop
                 ></video>
@@ -368,6 +375,7 @@
                 <video
                   src="dm-assets/videos/Nene.mp4"
                   playsinline
+                  poster="dm-assets/videos/Nene.png"
                   preload="metadata"
                   loop
                 ></video>
@@ -410,6 +418,7 @@
                 <video
                   src="dm-assets/videos/NIKO.mp4"
                   playsinline
+                  poster="dm-assets/videos/NIKO.png"
                   preload="metadata"
                   loop
                 ></video>
@@ -453,6 +462,7 @@
                 <video
                   src="dm-assets/videos/Oduyenyi.mp4"
                   playsinline
+                  poster="dm-assets/videos/Oduyenyi.png"
                   preload="metadata"
                   loop
                 ></video>
@@ -496,6 +506,7 @@
                 <video
                   src="dm-assets/videos/Pasqualina.mp4"
                   playsinline
+                  poster="dm-assets/videos/Pasqualina.png"
                   preload="metadata"
                   loop
                 ></video>
@@ -540,6 +551,7 @@
                 <video
                   src="dm-assets/videos/Saskia.mp4"
                   playsinline
+                  poster="dm-assets/videos/Saskia.png"
                   preload="metadata"
                   loop
                 ></video>
@@ -586,6 +598,7 @@
                 <video
                   src="dm-assets/videos/Seungwoo.mp4"
                   playsinline
+                  poster="dm-assets/videos/Seungwoo.png"
                   preload="metadata"
                   loop
                 ></video>
@@ -627,6 +640,7 @@
                 <video
                   src="dm-assets/videos/xiuhtezcatl.mp4"
                   playsinline
+                  poster="dm-assets/videos/xiuhtezcatl.png"
                   preload="metadata"
                   loop
                 ></video>
